...
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_toStartOf="@+id/done"
                android:layout_toEndOf="@+id/ivBack"
                android:fontFamily="@font/sf_pro_semibold"
                android:gravity="center_horizontal"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="@color/star_black"
...
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/flag_ca"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvRegion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/countryFlag"
                    android:layout_toRightOf="@+id/countryFlag"
                    android:paddingLeft="4dp"
...
                    android:paddingBottom="8dp"
                    android:text="+91"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_toEndOf="@+id/tvRegion"
...
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_weight="1"
                    android:background="@drawable/curved_gray_color"
                    android:fontFamily="@font/sf_pro_semibold"
...
                    android:padding="@dimen/dp_5"
                    android:text="@string/user_name1"
                    android:textSize="@dimen/medium"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@android:color/transparent"
                    android:digits="@string/digits_both"
                    android:hint="@string/hint_user_name"
...
                    android:text="@string/email"
                    android:textSize="@dimen/medium"
                    android:visibility="gone" />


                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
...
                    android:padding="@dimen/dp_10"
                    android:text="@string/password"
                    android:textSize="@dimen/medium"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
...
                    android:layout_weight="2"
                    android:padding="@dimen/dp_5"
                    android:text="@string/confirm"
                    android:textSize="@dimen/medium" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_25"
                    android:layout_weight="3"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_confirm_password"
...
                    android:layout_weight="2"
                    android:padding="@dimen/dp_5"
                    android:text="@string/referral_code"
                    android:textSize="@dimen/medium" />

                <EditText
                    android:id="@+id/etReferralCode"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_referral_code"
                    android:inputType="textCapSentences"
...
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/cbTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/minus_5"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:text="@string/tapAgreeAndContinue"
...
